# trust-gate-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PUBLISH.md  README.md  auth.py  bootstrap.py  demo.html  gen_demo.py  glama.json  mcpmarket.md  publish.sh  pyproject.toml  rate_limit.py  server.json  server_http.py  smithery.yaml
.agents/skills/trust-gate/: SKILL.md
src/trust_gate_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  server_http.py
tests/: test_auth.py  test_hardening.py  test_server.py
